Added descriptions, icons... to windows, deb and rpm installers

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "passky-desktop",
   "version": "0.0.1",
   "author": "Rabbit Company",
-  "description": "Desktop application for Passky (password manager)",
+  "description": "Simple and secure password manager",
   "main": "main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -29,10 +29,11 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "passky_desktop",
-            "description": "Desktop application for Passky (password manager)",
-            "iconUrl": "https://raw.githubusercontent.com/Rabbit-Company/Passky-Desktop/main/images/logo.ico",
-            "setupIcon": "https://raw.githubusercontent.com/Rabbit-Company/Passky-Desktop/main/images/logo.ico"
+            "name": "Passky",
+            "title": "Passky",
+            "description": "Simple and secure password manager",
+            "iconUrl": "images/logo.ico",
+            "setupIcon": "images/logo.ico"
           }
         },
         {
@@ -45,9 +46,14 @@
           "name": "@electron-forge/maker-deb",
           "config": {
             "options": {
+              "name": "Passky",
+              "productName": "Passky",
               "maintainer": "Rabbit Company",
               "homepage": "https://rabbit-company.com",
-              "description": "Desktop application for Passky (password manager)"
+              "description": "Simple and secure password manager",
+              "productDescription": "Passky is simple password manager, which works on a zero trust architecture. That means only user will be able to decrypt his passwords. So users can safelly store their passwords on any server. That means if a server on where all passwords are stored get hacked, hacker won't be able to decrypt passwords and data on this server will be useless for him.",
+              "genericName": "Password Manager",
+              "icon": "images/logo.png"
             }
           }
         },
@@ -55,9 +61,14 @@
           "name": "@electron-forge/maker-rpm",
           "config": {
             "options": {
+              "name": "Passky",
+              "productName": "Passky",
               "maintainer": "Rabbit Company",
               "homepage": "https://rabbit-company.com",
-              "description": "Desktop application for Passky (password manager)"
+              "description": "Simple and secure password manager",
+              "productDescription": "Passky is simple password manager, which works on a zero trust architecture. That means only user will be able to decrypt his passwords. So users can safelly store their passwords on any server. That means if a server on where all passwords are stored get hacked, hacker won't be able to decrypt passwords and data on this server will be useless for him.",
+              "genericName": "Password Manager",
+              "icon": "images/logo.png"
             }
           }
         }
