Fixed ico for windows

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
             "name": "Passky",
             "title": "Passky",
             "description": "Simple and secure password manager",
-            "iconUrl": "images/logo.ico",
+            "iconUrl": "https://github.com/Rabbit-Company/Passky-Desktop/blob/main/images/logo.ico",
             "setupIcon": "images/logo.ico"
           }
         },
