Added delete password button

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Passky",
+  "name": "passky",
   "version": "0.0.1",
   "author": "Rabbit Company",
   "description": "Simple and secure password manager",
