--- a/package.json
+++ b/package.json
@@ -7,17 +7,24 @@
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "dist": "electron-builder --linux snap"
   },
-  "keywords": [],
-  "license": "ISC",
+  "keywords": [
+    "Passky",
+    "Password Manager",
+    "Password",
+    "Manager"
+  ],
+  "license": "GPL-3.0",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-deb": "^6.0.0-beta.54",
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^12.0.7"
+    "electron": "^12.0.7",
+    "electron-builder": "^22.10.5"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
