--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "dist": "electron-builder --linux snap"
+    "dist": "electron-builder"
   },
   "keywords": [
     "Passky",
@@ -17,6 +17,13 @@
     "Manager"
   ],
   "license": "GPL-3.0",
+  "build": {
+    "appId": "com.rabbit-company.passky",
+    "copyright": "Copyright 2021 Rabbit Company LLC",
+    "mac": {
+      "category": "public.app-category.productivity"
+    }
+  },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
     "@electron-forge/maker-deb": "^6.0.0-beta.54",
