--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passky",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "author": "Rabbit Company",
   "description": "Simple and secure password manager",
   "main": "main.js",
@@ -25,13 +25,13 @@
     }
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.57",
-    "@electron-forge/maker-deb": "^6.0.0-beta.57",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.57",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
-    "@electron-forge/maker-zip": "^6.0.0-beta.57",
-    "electron": "^13.1.2",
-    "electron-builder": "^22.11.7"
+    "@electron-forge/cli": "^6.0.0-beta.58",
+    "@electron-forge/maker-deb": "^6.0.0-beta.58",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.58",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.58",
+    "@electron-forge/maker-zip": "^6.0.0-beta.58",
+    "@electron-forge/maker-appx": "^6.0.0-beta.58",
+    "electron": "^13.1.7"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
