--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.58",
+    "@electron-forge/maker-appx": "^6.0.0-beta.58",
     "@electron-forge/maker-deb": "^6.0.0-beta.58",
     "@electron-forge/maker-rpm": "^6.0.0-beta.58",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.58",
     "@electron-forge/maker-zip": "^6.0.0-beta.58",
-    "@electron-forge/maker-appx": "^6.0.0-beta.58",
-    "electron": "^13.1.7"
+    "electron": "^13.1.7",
+    "electron-builder": "^22.11.7"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
