--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "passky",
-  "version": "2.0.3",
-  "author": "Rabbit Company",
+  "version": "2.0.5",
+  "author": "Rabbit Company LLC",
   "description": "Simple and secure password manager",
   "main": "main.js",
   "scripts": {
@@ -25,14 +25,14 @@
     }
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.58",
-    "@electron-forge/maker-appx": "^6.0.0-beta.58",
-    "@electron-forge/maker-deb": "^6.0.0-beta.58",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.58",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.58",
-    "@electron-forge/maker-zip": "^6.0.0-beta.58",
+    "@electron-forge/cli": "^6.0.0-beta.59",
+    "@electron-forge/maker-appx": "^6.0.0-beta.59",
+    "@electron-forge/maker-deb": "^6.0.0-beta.59",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.59",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.59",
+    "@electron-forge/maker-zip": "^6.0.0-beta.59",
     "electron": "^13.1.7",
-    "electron-builder": "^22.11.7"
+    "electron-builder": "^22.11.11"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
