--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "appx": {
       "applicationId": "Passky",
       "displayName": "Passky",
+      "backgroundColor": "#44475a",
       "publisher": "CN=52198C2F-725A-42E5-855A-FB2F0CA67875",
       "publisherDisplayName": "Rabbit Company LLC",
       "identityName": "57225RabbitCompanyLLC.Passky"
