--- a/flatpak/com.rabbit_company.passky.yml
+++ b/flatpak/com.rabbit_company.passky.yml
@@ -58,3 +58,4 @@ modules:
       - install -D -m644 -t /app/share/applications ../com.rabbit_company.passky.desktop
       - install -D -m644 -t /app/share/icons/hicolor/128x128/apps ../com.rabbit_company.passky.png
       - install -D -m644 -t /app/share/icons/hicolor/scalable/apps ../com.rabbit_company.passky.svg
+      - install -D -m644 -t /app/share/appdata ../com.rabbit_company.passky.appdata.xml
