--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build/release
+name: Build
 
 on: push
 
@@ -23,10 +23,16 @@ jobs:
         uses: samuelmeuli/action-electron-builder@v1
         with:
           skip_build: true
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
 
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+      
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: passky-desktop-${{ matrix.os }}
+          path: |
+            dist/passky*
+            dist/Passky*
